--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -27,19 +27,23 @@
 }
 
 .card{
-    width: 300px;
+    width: 20%;
     height: 400px;
     border: 1px solid black;
     border-radius: 5px;
     overflow: hidden;
     padding: 10px;
-    margin:30px 20px;
+    margin:40px 50px;
     background-color: white;
+ 
 }
-.product-image{
+.product-data{
+    margin-top: 5%;
+}
+#product-image{
 width:100%;
-max-width: 300px;
-min-height: 200px;
+height: 150px;
+  justify-content: center;
 display: block;
 object-fit: cover;
 
@@ -49,26 +53,26 @@ object-fit: cover;
     margin: 10px 0px;
 }
 .product-price{
-margin: 10ox 0px;
-padding-bottom: 20px;
+margin: 10px 0px;
+
 font-size: 18px;
-line-height: 30px;
+
 
 }
 .product-add-button{
 font-weight: 700;
-font-size: 18px;
+font-size: 10px;
 border-radius: 5px;
 border: none;
 outline: none;
 background-color: black;
 color: white;
 width: 100%;
-height: 40px;
+height: 30px;
 display: block;
 cursor: pointer;
 text-transform: uppercase;
-margin: 15px auto;
+
 
 }
 .product-add-button:hover{
