--- a/src/components/front/Cart/Cart.css
+++ b/src/components/front/Cart/Cart.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 .cart-items{
     margin: 30px ;
 }
@@ -29,6 +30,7 @@
       border: 2px solid grey;
       border-radius: 15px;
       box-shadow:5px 5px 10px  #888888;
+      padding: 7px;
       
   }
   .cart-item-total-price-heading{
@@ -59,12 +61,13 @@
 .cart-items-name{
 font-size: 18px;
 font-weight: 800;
-
+font-family: 'Roboto Condensed', sans-serif;
 }
 .cart-itemprice{
     font-size: 18px;
     font-weight: 800;
     margin: 2%;
+   
 }
 .cart-data{
     display: block;
@@ -73,6 +76,7 @@ font-weight: 800;
 }
 .cart-item-total-price{
     font-weight: 800;
+   
 }
 .cart-item-total-price-heading{
     font-weight: 800;   
@@ -89,14 +93,24 @@ font-weight: 800;
     padding: 5px;
     background-color: tomato;
     color: white;
-    margin-right: 20%;
+    margin-right: 2%;
     cursor: pointer;
+    border-radius: 15px;
+    width: 20%;
+}
+.cart-item-add:hover{
+    background-color: rgb(199, 101, 36);
 }
 .cart-item-remove{
+    width: 20%;
     padding: 5px;
-    background-color: tomato;
-    color: white;
+    background-color: rgb(218, 218, 65);
+    color: rgb(37, 27, 27);
     cursor: pointer;
-    margin-right: 20%;
+    
+    border-radius: 15px;
 
+}
+.cart-item-remove:hover{
+    background-color: rgb(157, 182, 19);
 }
