--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -22,9 +22,13 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     border-radius: 5px;
-   
     margin: 10px 0px;
     
+}
+.product-title{
+    box-shadow: 5px 5px 5px grey;
+    padding: 7px;
+  
 }
 
 .card{
@@ -44,7 +48,7 @@
 #product-image{
 width:100%;
 height: 150px;
-  justify-content: center;
+justify-content: center;
 display: block;
 object-fit: cover;
 
@@ -73,6 +77,7 @@ height: 30px;
 display: block;
 cursor: pointer;
 text-transform: uppercase;
+bottom: 9px;
 
 
 }
@@ -81,4 +86,8 @@ text-transform: uppercase;
 }
 .product-add-button:active{
     transform: translatey(2px);
+}
+.product-description{
+    font-size: 13px!important;
+   
 }
