Banner Slide added

--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -92,3 +92,11 @@ bottom: 9px;
     font-size: 13px!important;
    
 }
+
+@media  (max-width:980px){
+    .product-description{
+        display: none;
+       
+    }
+    
+}
