--- a/src/components/BannerSlide/BannerSlide.css
+++ b/src/components/BannerSlide/BannerSlide.css
@@ -1,4 +1,23 @@
 .slick-arrow.slick-prev,
 .slick-arrow.slick-next{
-    background-color: blueviolet;
+   background-color:#fcfcfc;
+   width: 2%;
+   height: 10vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   z-index: 1;
+}
+.slick-prev::before, .slick-next::before{
+display: none;
+}
+.slick-prev{
+    left:0;
+    border-bottom-right-radius: 7px;
+    border-top-right-radius: 7px;
+}
+.slick-next{
+    right:0;
+    border-bottom-left-radius: 7px;
+    border-top-left-radius: 7px;
 }
