--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -75,7 +75,7 @@ background-color: black;
 color: white;
 width: 100%;
 height: 30px;
-display: block;
+margin: 1%;
 cursor: pointer;
 text-transform: uppercase;
 bottom: 9px;
