--- a/src/components/BannerSlide/BannerSlide.css
+++ b/src/components/BannerSlide/BannerSlide.css
@@ -21,3 +21,46 @@ display: none;
     border-bottom-left-radius: 7px;
     border-top-left-radius: 7px;
 }
+.BannerSlide-img{
+    width: 100%;
+    height: 50vh;
+}
+.Arrow-left-Style{
+    color:black;
+  
+}
+.Arrow-right-Style{
+    color:black;
+ 
+
+}
+
+@media (max-width:480px){
+    .BannerSlide-img{
+        width: 100%;
+        height: 25vh;
+    }
+    .Arrow-left-Style{
+        color:black;
+       font-size: large;
+       margin-left: 80% ;
+    }
+    .slick-arrow.slick-prev,
+    .slick-arrow.slick-next{
+   background-color:#fcfcfc;
+   width: 4%;
+   height: 10vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+}
+.slick-prev::before, .slick-next::before{
+    display: none;
+    }
+    .slick-prev{
+        left:0;
+        border-bottom-right-radius: 7px;
+        border-top-right-radius: 7px;
+    }
+    }
