--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -25,12 +25,7 @@
     margin: 10px 0px;
     
 }
-.product-title{
-    box-shadow: 5px 5px 5px grey;
-    padding: 7px;
-    width:100%;
-  
-}
+
 
 .card{
     width: 80%;
@@ -71,7 +66,7 @@ font-size: 10px;
 border-radius: 5px;
 border: none;
 outline: none;
-background-color: black;
+background-color: rgb(47, 97, 153);
 color: white;
 width: 100%;
 height: 30px;
