--- a/src/components/MultiProducts/MultiProducts.css
+++ b/src/components/MultiProducts/MultiProducts.css
@@ -46,10 +46,56 @@ div > p {
         cursor: pointer;
         text-transform: uppercase;
 }
+.product-price{
+
+    color: rgb(207, 23, 23);
+    font-size: 20px;
+    }
+.product-name{
+    text-transform: capitalize;
+       font-weight: 700;
+       font-size: 24;
+       
+    }
+  
+    .BannerSecimgcontainer{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+       
+        height:50vh ;
+    }
+    .BannerSecimg1{
+        width: 45%;
+        height:50vh ;
+    }
+    .BannerSecimg2{
+        width: 70%;
+       height: 50vh;
+    }
+    .BannerSecimg3{
+        width: 90%;
+       height: 15vh;
+       margin-top: 2%;
+    }
+    .imgStyle:hover{
+        transform: scale(1.1);
+        transition: 500;
+    }
 @media (max-width:480px){
+    .product-price{
+
+        color: rgb(207, 23, 23);
+        font-size: 13px;
+        }
+    .product-name{
+        text-transform: capitalize;
+           font-weight: 700;
+           font-size: small;
+        }
     .Products-Slide-Container{
         display: block;
-        margin-top: 3%;
+        margin-top: 5%;
         text-align: center;
      }
     .imgStyle{
@@ -58,13 +104,8 @@ div > p {
         
        }
        .product-title{
-        box-shadow: 5px 5px 5px grey;
-        padding: 7px;
-        width:100%;
         font-size: 15px;
-        text-align: start;
-        margin-top: 9%;
-      
+         
     }
        .product-add-button{
         
@@ -79,8 +120,52 @@ div > p {
         margin: 1%;
         cursor: pointer;
         text-transform: uppercase;
-      
+
+        }
+        .product-title-container{
+            box-shadow: 5px 5px 5px grey;
+            padding-bottom: 10px;
+            padding-left: 20px;
+            padding-right: 20px;
+            width:100%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 5%;
+            
+        }
+        .ViewBtn{
         
-        
+                 font-size: 8px;
+                border-radius: 3px;
+                font-weight: 700;
+                border: none;
+                outline: none;
+                background-color: rgb(49, 67, 233);
+                color: white;
+                width: 100%;
+                padding: 5px;
+                height: 4vh;
+                
+                cursor: pointer;
+                text-transform: uppercase;
+        }
+        .BannerSecimg1{
+            width: 45%;
+            height:20vh ;
+        }
+        .BannerSecimg2{
+            width: 90%;
+           height: 20vh;
+        }
+        .BannerSecimgcontainer{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            height:20vh ;
+        }
+        .BannerSecimg3{
+            width: 90%;
+           height: 5vh;
+           margin-top: 3%;
         }
     }
