--- a/src/components/front/Header/Header.css
+++ b/src/components/front/Header/Header.css
@@ -1,4 +1,4 @@
-.header{
+/*.header{
 background-color: black;
 color:white;
 display: flex;
@@ -43,4 +43,95 @@ font-weight: 700;
 vertical-align: super;
 color: yellow;
 
+ } */
+ .cart-count{
+   margin: 3px;
+ font-size: 14px;
+ font-weight: 700;
+ vertical-align: super;
+ color: yellow;
+ 
+  }
+
+ .logo{
+    font-size: 30px;
+ }
+
+ .navbar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 75px;
+    background-color: #00828c;
+    color: white;
+ }
+ .nav-links{
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    width:75% ;
+    
+ }
+ .home,
+ .Signup,
+ .Cart{
+    text-decoration: none;
+    color:white;
+    font-size: 20px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+ }
+ .Signup{
+    border: 1px solid yellow;
+    border-radius: 5px;
+ }
+ .mobile-menu-icon{
+    display: none;
+ }
+
+ @media screen and (max-width:780px) {
+    .logo{
+       display: flex;
+       position: absolute;
+       top: 15px;
+       left:35px;
+
+    }
+    .nav-links{
+       display: none;
+    }
+    .nav-links-mobile{
+       position: absolute;
+       display: block;
+       list-style: none;
+       background-color: #005469;
+       left:0;
+       top:75px;
+       transition: all 0.5s ease-out;
+       width: 100%;
+    }
+    .home,
+    .Signup,
+    .Cart{
+       color:white;
+      text-align: center;
+      padding: 32px;
+      width: 100%;
+      transition: all 0.5s ease;
+    }
+    .Signup{
+       border:none;
+    }
+    .mobile-menu-icon{
+       display: block;
+       position: absolute;
+       font-size: 30px;
+       color: white;
+       background-color: #00828c;
+       border:none;
+       outline: none;
+       top:15px;
+       right: 25px;
+    }
  }
