--- a/src/components/BannerSlide/BannerSlide.css
+++ b/src/components/BannerSlide/BannerSlide.css
@@ -34,8 +34,17 @@ display: none;
  
 
 }
-
+.BannerSlide{
+    display: block;
+    background-color: white;
+    margin: 2%;
+}
 @media (max-width:480px){
+   .BannerSlide{
+       display: block;
+       background-color: white;
+       margin: 2%;
+   }
     .BannerSlide-img{
         width: 100%;
         height: 25vh;
@@ -62,5 +71,8 @@ display: none;
         left:0;
         border-bottom-right-radius: 7px;
         border-top-right-radius: 7px;
+    }
+    .slick-slider ,.slick-initialized{
+        display: block;
     }
     }
